feat: add product details, API integration and cart setup
Co-authored-by: Copilot <copilot@github.com>